--- a/mod2solution/css/styles.css
+++ b/mod2solution/css/styles.css
@@ -14,8 +14,9 @@
 h1{
     position:relative;
 	text-align:center;
-	 margin-top:30px;
-	 margin-bottom:50px;
+	margin-top:30px;
+	margin-bottom:50px;
+	font-size:28px;
 }
  
 .cell-title{
@@ -26,7 +27,7 @@ h1{
 
 .cell-title>h2{ 
 	text-align: right;
-
+	font-size: 20px;
 }
   
 .cell-title>h2>span{
@@ -46,6 +47,7 @@ h1{
 }
 
 .cell-text{
+    font-size: 16px;
 	border: 1px solid black;
 	float:left;  
 	height: 180px;
