--- a/mod2solution/css/styles.css
+++ b/mod2solution/css/styles.css
@@ -26,13 +26,17 @@ h1{
 }
 
 .cell-title>h2{ 
-	text-align: right;
 	font-size: 20px;
 }
-  
-.cell-title>h2>span{
-	border: 1px solid black;	 
-}
+ 
+.cell-title-content{
+     float:right;
+     position:relative;
+     border: 1px solid black;
+     padding-left:20px;
+     padding-right:20px;
+} 
+ 
 
 #title_1{
 	background:#20B2AA;
@@ -55,7 +59,7 @@ h1{
 }
 
 .cell-text>p{
-	 margin-top:10px;
+	 margin-top:45px;
 	 margin-bottom:10px;
 	 margin-left:15px;
 	 margin-right:15px;
